; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_signal.c_sighand_new.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_signal.c_sighand_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sighand = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.sighand* @sighand_new() #0 {
  %1 = alloca %struct.sighand*, align 8
  %2 = alloca %struct.sighand*, align 8
  %3 = call %struct.sighand* @malloc(i32 8)
  store %struct.sighand* %3, %struct.sighand** %2, align 8
  %4 = load %struct.sighand*, %struct.sighand** %2, align 8
  %5 = icmp eq %struct.sighand* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store %struct.sighand* null, %struct.sighand** %1, align 8
  br label %16

7:                                                ; preds = %0
  %8 = load %struct.sighand*, %struct.sighand** %2, align 8
  %9 = call i32 @memset(%struct.sighand* %8, i32 0, i32 8)
  %10 = load %struct.sighand*, %struct.sighand** %2, align 8
  %11 = getelementptr inbounds %struct.sighand, %struct.sighand* %10, i32 0, i32 0
  store i32 1, i32* %11, align 4
  %12 = load %struct.sighand*, %struct.sighand** %2, align 8
  %13 = getelementptr inbounds %struct.sighand, %struct.sighand* %12, i32 0, i32 1
  %14 = call i32 @lock_init(i32* %13)
  %15 = load %struct.sighand*, %struct.sighand** %2, align 8
  store %struct.sighand* %15, %struct.sighand** %1, align 8
  br label %16

16:                                               ; preds = %7, %6
  %17 = load %struct.sighand*, %struct.sighand** %1, align 8
  ret %struct.sighand* %17
}

declare dso_local %struct.sighand* @malloc(i32) #1

declare dso_local i32 @memset(%struct.sighand*, i32, i32) #1

declare dso_local i32 @lock_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
